-Fixed Bug 1498904 "Forum Advanced Post Editor Too High" -Added actual toggling for sponsor features (was hard coded to true for editor) -Added form validate for editor -Added the "Please Specify a Title' text in the title box (it even works better than before) -Editor actually looks right for once (all boxes line up, and the show/hide button works) -Removed editor.js (no longer need it there)

--- a/chrome/skin/editor.css
+++ b/chrome/skin/editor.css
@@ -50,7 +50,10 @@ toolbar {
 	margin:0px 0px 0px 0px;
 	padding:0px 0px 0px 0px;
 }
-
+box > toolbarbutton > label {
+ width:0px !important;
+ padding:0 0 0 0 !important;
+}
 toolbarbutton>image {
 	margin-right:3px !important;
 }
